2012-09-24  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14562]
	* malloc/arena.c (heap_trim): Properly get fencepost and adjust
	new chunk size with MALLOC_ALIGN_MASK.

2012-08-29  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14476]
	* Makefile (install): Also pass LD_SO=$(ld.so-version) to
	scripts/test-installation.pl.
	* scripts/test-installation.pl: Use LD_SO to get $ld_so_name
	and $ld_so_version if it is set.

2012-08-27  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14459]
	* stdlib/strtod_l.c: Include <stdint.h>.
	(NDEBUG): Do not define.
	(round_and_return): Change EXPONENT parameter to type intmax_t.
	Rearrange calculations to avoid internal overflow possibilities.
	(str_to_mpn): Change EXPONENT parameter to type intmax_t *.
	Rearrange calculations to avoid internal overflow possibilities.
	Assert that number fits inside MPNSIZE limbs.
	(____STRTOF_INTERNAL): Change EXPONENT variable to type intmax_t.
	Change DIG_NO, INT_NO and LEAD_ZERO to type size_t.  Rearrange
	calculations and add assertions to avoid internal overflow
	possibilities.  Add casts to avoid signed/unsigned operations.
	* stdlib/tst-strtod-overflow.c: New file.
	* stdlib/Makefile (tests): Add tst-strtod-overflow.

2012-08-15  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	[BZ #14195]
	* sysdeps/i386/i686/multiarch/strcmp-sssse3.S: Fix
	segmentation fault for a case of two empty input strings.
	* string/test-strncasecmp.c (check1): Renamed to...
	(bz12205): ...this.
	(bz14195): Add new testcase for two empty input strings and N > 0.
	(test_main): Call new testcase, adapt for renamed function.

2012-07-06  Mike Frysinger  <vapier@gentoo.org>

	* sunrpc/rpc_clntout.c: Change <rpc/types.h> to "rpc/types.h".

2012-07-16  Andreas Jaeger  <aj@suse.de>

	* po/ru.po: Update from translation team.

2012-07-13  Andreas Jaeger  <aj@suse.de>

	* po/fr.po: Update from translation team.

2012-07-11  Andreas Jaeger  <aj@suse.de>

	* po/fr.po: Update from translation team.
